# cbsp-boot-utilities

.github/: CapsuleCI.md  opensslroot.cfg
.github/workflows/: ci.yml
uefi_capsule_generation/: BinToHex.py  FVCreation.py  FVCreation_header.py  FvUpdate.xml  Makefile  README.md  SYSFW_VERSION_program.py  UpdateFvXml.py  UpdateJsonParameters.py  XmlFwEntryValidation.py  XmlParser.py  __init__.py  capsule_creator.py  capsule_setup.py  cli.py  create_config_json.py  dump_dtb_xblconfig.py  pyproject.toml  set_dtb_property.py  xblconfig_parser.py
uefi_capsule_generation/src/qcom_capsule_tool/: BinToHex.py  FVCreation.py  FVCreation_header.py  SYSFW_VERSION_program.py  UpdateJsonParameters.py  XmlFwEntryValidation.py  XmlParser.py  __init__.py  capsule_creator.py  capsule_setup.py  cli.py  set_dtb_property.py
